--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     flex-direction: column;
 }
 
-.total {
+.output {
     display: flex;
     justify-content: end;
     align-items: center;
@@ -56,3 +56,5 @@ body {
 .equal {
     margin-top: 10px;
 }
+
+
